--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>OpenAPI</title>
+    <title>Drones</title>
 
 </head>
 
@@ -243,7 +243,7 @@
     <div class="madeBy">
 
         <h1>Website Made By: Harishan Thilakanathan<br>
-            Email: hthilaka@uoguelph.ca
+            Email: harishan.thilak@gmail.com
         </h1>
     </div>
 
